--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.irmsimapp">
+    package="com.dcdroid.chatapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -19,15 +19,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.UserProfileActivity" android:screenOrientation="portrait"
+        <activity android:name="com.dcdroid.chatapp.Activity.UserProfileActivity" android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"></activity>
-        <activity android:name=".Activity.IndividualChatActivity" android:screenOrientation="portrait"
+        <activity android:name="com.dcdroid.chatapp.Activity.IndividualChatActivity" android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"></activity>
-        <activity android:name=".Activity.GroupChatActivity" android:screenOrientation="portrait"
+        <activity android:name="com.dcdroid.chatapp.Activity.GroupChatActivity" android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"></activity>
-        <activity android:name=".Activity.RosterList" android:screenOrientation="portrait"
+        <activity android:name="com.dcdroid.chatapp.Activity.RosterList" android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"/>
-        <activity android:name=".Activity.LoginActivity" android:screenOrientation="portrait"
+        <activity android:name="com.dcdroid.chatapp.Activity.LoginActivity" android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,9 +35,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.GroupListActivity" android:screenOrientation="portrait"
+        <activity android:name="com.dcdroid.chatapp.Activity.GroupListActivity" android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden" />
-        <activity android:name=".Activity.GroupProfileActivity" android:screenOrientation="portrait"
+        <activity android:name="com.dcdroid.chatapp.Activity.GroupProfileActivity" android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden" />
         <meta-data
             android:name="io.fabric.ApiKey"
