--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "com.irmsimapp"
+        applicationId "com.dcdroid.irmsimapp"
         minSdkVersion 14
         targetSdkVersion 24
         versionCode 1
