--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jun 29 18:22:46 IST 2018
+#Sun Nov 22 01:17:10 IST 2020
 ndk.dir=/home/zlinux/Android/Sdk/ndk-bundle
-sdk.dir=/home/zlinux/Android/Sdk
+sdk.dir=C\:\\Users\\Darshit\\AppData\\Local\\Android\\Sdk
